--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,9 @@ logging:
         data:
           mongodb: DEBUG
 
+server:
+  port: 8081
+
 spring:
   application:
     name: Bootstrap Spring Boot
