logging.file 설정 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,6 @@
 logging:
   file:
-    name: bustrace-app.log
-    path: ./logs
+    name: ./logs/bustrace-app.log
   level:
     hello: INFO
     org:
